// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxSet /> should render a checkbox button set 1`] = `
<styled.div
  orientation="vertical"
>
  <styled.div
    key="key-option1"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        checked={true}
        className="input "
        data-component-type="checkbox_input"
        id="key-option1"
        name="key"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="checkbox checkbox-button"
        htmlFor="key-option1"
      >
        123123
      </label>
    </div>
  </styled.div>
  <styled.div
    key="key-option2"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        checked={false}
        className="input "
        data-component-type="checkbox_input"
        disabled={true}
        id="key-option2"
        name="key"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="checkbox checkbox-button"
        htmlFor="key-option2"
      >
        this is option 2 (I am disabled)
      </label>
    </div>
  </styled.div>
  <styled.div
    key="key-option3"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        checked={false}
        className="input "
        data-component-type="checkbox_input"
        id="key-option3"
        name="key"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="checkbox checkbox-button"
        htmlFor="key-option3"
      >
        this is option 3
      </label>
    </div>
  </styled.div>
  <styled.div
    key="key-option4"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        checked={true}
        className="input "
        data-component-type="checkbox_input"
        id="key-option4"
        name="key"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="checkbox checkbox-button"
        htmlFor="key-option4"
      >
        this is option 4
      </label>
    </div>
  </styled.div>
</styled.div>
`;

exports[`<CheckboxSet /> should render a checkbox set 1`] = `
<styled.div
  orientation="vertical"
>
  <styled.div
    key="option-option1"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        checked={true}
        className="input "
        data-component-type="checkbox_input"
        id="option-option1"
        name="option"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="checkbox"
        htmlFor="option-option1"
      >
        123123
      </label>
    </div>
  </styled.div>
  <styled.div
    key="option-option2"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        checked={false}
        className="input "
        data-component-type="checkbox_input"
        disabled={true}
        id="option-option2"
        name="option"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="checkbox"
        htmlFor="option-option2"
      >
        this is option 2 (I am disabled)
      </label>
    </div>
  </styled.div>
  <styled.div
    key="option-option3"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        checked={false}
        className="input "
        data-component-type="checkbox_input"
        id="option-option3"
        name="option"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="checkbox"
        htmlFor="option-option3"
      >
        this is option 3
      </label>
    </div>
  </styled.div>
  <styled.div
    key="option-option4"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        checked={true}
        className="input "
        data-component-type="checkbox_input"
        id="option-option4"
        name="option"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="checkbox"
        htmlFor="option-option4"
      >
        this is option 4
      </label>
    </div>
  </styled.div>
</styled.div>
`;

exports[`<CheckboxSet /> should render a checkbox set with horizontal buttons 1`] = `
<styled.div
  orientation="horizontal"
>
  <styled.div
    key="key-option1"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        checked={true}
        className="input "
        data-component-type="checkbox_input"
        id="key-option1"
        name="key"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="checkbox"
        htmlFor="key-option1"
      >
        123123
      </label>
    </div>
  </styled.div>
  <styled.div
    key="key-option2"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        checked={false}
        className="input "
        data-component-type="checkbox_input"
        disabled={true}
        id="key-option2"
        name="key"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="checkbox"
        htmlFor="key-option2"
      >
        this is option 2 (I am disabled)
      </label>
    </div>
  </styled.div>
  <styled.div
    key="key-option3"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        checked={false}
        className="input "
        data-component-type="checkbox_input"
        id="key-option3"
        name="key"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="checkbox"
        htmlFor="key-option3"
      >
        this is option 3
      </label>
    </div>
  </styled.div>
  <styled.div
    key="key-option4"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        checked={true}
        className="input "
        data-component-type="checkbox_input"
        id="key-option4"
        name="key"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="checkbox"
        htmlFor="key-option4"
      >
        this is option 4
      </label>
    </div>
  </styled.div>
</styled.div>
`;

exports[`<CheckboxSet /> should render a checkbox set with parent 1`] = `
<styled.div>
  <styled.div
    key="option-all"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        checked={false}
        className="input "
        data-component-type="checkbox_input"
        disabled={true}
        id="option-all"
        name="option"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="checkbox"
        htmlFor="option-all"
      >
        All options
      </label>
    </div>
  </styled.div>
  <styled.div
    margins={
      Object {
        "left": 32,
      }
    }
    orientation="vertical"
  >
    <styled.div
      key="option-option1"
      margins={
        Object {
          "bottom": 8,
        }
      }
    >
      <div
        className="checkbox-input checkboxInput"
      >
        <styled.input
          checked={true}
          className="input "
          data-component-type="checkbox_input"
          id="option-option1"
          name="option"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="checkbox"
          htmlFor="option-option1"
        >
          123123
        </label>
      </div>
    </styled.div>
    <styled.div
      key="option-option2"
      margins={
        Object {
          "bottom": 8,
        }
      }
    >
      <div
        className="checkbox-input checkboxInput"
      >
        <styled.input
          checked={false}
          className="input "
          data-component-type="checkbox_input"
          disabled={true}
          id="option-option2"
          name="option"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="checkbox"
          htmlFor="option-option2"
        >
          this is option 2 (I am disabled)
        </label>
      </div>
    </styled.div>
    <styled.div
      key="option-option3"
      margins={
        Object {
          "bottom": 8,
        }
      }
    >
      <div
        className="checkbox-input checkboxInput"
      >
        <styled.input
          checked={false}
          className="input "
          data-component-type="checkbox_input"
          id="option-option3"
          name="option"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="checkbox"
          htmlFor="option-option3"
        >
          this is option 3
        </label>
      </div>
    </styled.div>
    <styled.div
      key="option-option4"
      margins={
        Object {
          "bottom": 8,
        }
      }
    >
      <div
        className="checkbox-input checkboxInput"
      >
        <styled.input
          checked={true}
          className="input "
          data-component-type="checkbox_input"
          id="option-option4"
          name="option"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="checkbox"
          htmlFor="option-option4"
        >
          this is option 4
        </label>
      </div>
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`<CheckboxSet /> should render a checkbox set with tight spacing 1`] = `
<styled.div
  orientation="vertical"
>
  <styled.div
    key="key-option1"
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        checked={true}
        className="input "
        data-component-type="checkbox_input"
        id="key-option1"
        name="key"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="checkbox"
        htmlFor="key-option1"
      >
        123123
      </label>
    </div>
  </styled.div>
  <styled.div
    key="key-option2"
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        checked={false}
        className="input "
        data-component-type="checkbox_input"
        disabled={true}
        id="key-option2"
        name="key"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="checkbox"
        htmlFor="key-option2"
      >
        this is option 2 (I am disabled)
      </label>
    </div>
  </styled.div>
  <styled.div
    key="key-option3"
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        checked={false}
        className="input "
        data-component-type="checkbox_input"
        id="key-option3"
        name="key"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="checkbox"
        htmlFor="key-option3"
      >
        this is option 3
      </label>
    </div>
  </styled.div>
  <styled.div
    key="key-option4"
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        checked={true}
        className="input "
        data-component-type="checkbox_input"
        id="key-option4"
        name="key"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="checkbox"
        htmlFor="key-option4"
      >
        this is option 4
      </label>
    </div>
  </styled.div>
</styled.div>
`;
